<resources>
    <string name="app_name">Stand Up</string>
    <string name="about_label">About</string>
    <string name="settings_label">Settings</string>
    <string name="time_to_stand">Time to stand up!</string>
    <string name="ready_to_stand">Get ready to stand up!</string>
    <string name="time_to_sit">You can sit down</string>
    <string name="number_picker_unit"> min</string>
    <string name="timer_unit"> min remaining</string>
    <string name="start_button">START SESSION</string>
    <string name="stop_button">STOP SESSION</string>
    <string name="session_started">Session started!</string>
    <!-- In case user picks a custom alarm that isn't the right format -->
    <string name="warning">The alarm cannot be found or isn\'t the accepted format by Android!
        \n\nPlease convert the custom alarm to an acceptable format or pick one of the default Android alarms.
        \n\nAndroid accepts the following audio formats (other formats vary by device):\n
        \nAAC LC/LTP
        \nHE-ACCv1
        \nHE-ACCv2
        \nAMR-NB
        \nAMR-WB
        \nFLAC
        \nMP3
        \nMIDI
        \nVorbis
        \nPCM/WAVE
    </string>

    <!-- About strings -->
    <string name="about">About</string>
    <string name="about_text">Stand Up helps you stay healthy by reminding you to stand
        up periodically when you plan on sitting down for prolonged periods of time. Customize the
        timer and reminder settings for standing and sitting and start a session! \n\nThe app can run
        in the background so simply hit Home and continue doing other things and Stand Up will keep
        reminding you until stopped.\n\nI hope you find this app useful! You\'re more than welcome
        to forward your questions/comments/feedback to my email and I will try to respond within 2
        business days:\n</string>
    <string name="email_address">bitsorific@gmail.com\n</string>
    <string name="source_label">Highly cited article:</string>
    <string name="source">Owen, N., Healy, G. N., Matthews, C. E., &amp; Dunstan, D. W. (2010). Too Much Sitting: The Population-Health Science of Sedentary Behavior. Exercise and Sport Sciences Reviews, 38(3), 105–113. http://www.ncbi.nlm.nih.gov/pmc/articles/PMC3404815/</string>
    <string name="eula">End User License Agreement</string>
    <string name="eula_text">This software is provided as-is, with no warranty of any kind.\n\nYour usage of this
        app is done at your own risk, and in no event shall the developer be liable for personal injury or any
        incidental, special, indirect, or consequential damages whatsoever.
    </string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Sound-->
    <string name="pref_sound_title">Sound</string>
    <string name="pref_summary_sound">Enable sound alarms</string>
    <string name="pref_title_sound">Alarm sound</string>
    <string name="pref_summary_alarm_tone">Pick an alarm sound (volume is based on Media volume)</string>
    <string name="pref_title_alarm_tone_stand">Stand up alarm</string>
    <string name="pref_timer_title">Timer</string>
    <!-- Sitting down alarm -->
    <string name="pref_title_alarm_tone_sit">Sit down alarm</string>
    <string name="pref_title_sitting_period">Sitting period</string>
    <string name="pref_summary_sitting_period">Period of time sitting down (Default: 15 Max: 60)</string>
    <string name="dialog_title_sitting_time_preference">Enter sitting period</string>
    <!-- Standing up alarm -->
    <string name="pref_title_standing_period">Standing period</string>
    <string name="pref_summary_standing_period">Period of time standing up (Default: 5)</string>
    <string name="dialog_title_standing_time_preference">Enter standing period (min)</string>

    <!-- About -->
    <string name="rate">Rate</string>
    <string name="rate_on_google_play">Rate on Google Play</string>

    <!-- Vibrate -->
    <string name="vibrate_label">Vibrate</string>
    <string name="pref_pulse_number_dialog_title">Number of pulses for standing</string>
    <string name="pref_pulse_number_sit_dialog_title">Number of pulses for sitting</string>
    <string name="pref_pulse_number_summary">Number of pulses for the reminder</string>
    <!--Standing-->
    <string name="pref_pulse_number_stand_title">Stand up pulses</string>
    <!-- Sitting-->
    <string name="pref_pulse_number_sit_title">Sit down pulses</string>

    <!-- Speed -->
    <string name="pref_pulse_speed_summary">Pick the speed of pulse</string>
    <string name="pref_pulse_speed_dialog_title">Speed of pulse for standing</string>
    <string name="pref_pulse_speed_sit_dialog_title">Speed of pulse for sitting</string>
    <string name="pref_pulse_speed_stand_title">Stand up pulse speed</string>
    <string name="pref_pulse_speed_sit_title">Sit down pulse speed</string>

    <!-- Notifications -->
    <string name="notification_stand_reminder">Stand up reminder</string>
    <string name="notification_sit_reminder">Sit down reminder</string>
    <string name="notification_stand">Time to stand up!</string>
    <string name="notification_sit">You can sit down now!</string>
    <string name="pref_notification_title">Reminder notification</string>
    <string name="pref_notification_summary">Enable notification of current status</string>

    <!-- Activity detection strings -->
    <string name="in_vehicle">In a vehicle</string>
    <string name="on_bicycle">On a bicycle</string>
    <string name="on_foot">On foot</string>
    <string name="running">Running</string>
    <string name="still">Still</string>
    <string name="tilting">Tilting</string>
    <string name="unknown">Unknown activity</string>
    <string name="walking">Walking</string>
    <string name="unidentifiable_activity">Unidentifiable activity: %1$d</string>

    <string name="detected_activities_title">Detected Activities</string>

    <string name="request_activity_updates">Request updates</string>
    <string name="remove_activity_updates">Remove updates</string>
    <string name="activity_updates_added">Activity updates added</string>
    <string name="activity_updates_removed">Activity updates removed</string>

    <string name="not_connected">GoogleApiClient not yet connected. Try again.</string>

</resources>