<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/pref_sound_title"
        android:key="pref_sound_settings">

        <SwitchPreference
            android:key="pref_key_sound"
            android:summary="@string/pref_summary_sound"
            android:title="@string/pref_title_sound"
            android:defaultValue="false" />

        <RingtonePreference
            android:key="pref_key_alarm_tone"
            android:dependency="pref_key_sound"
            android:summary="@string/pref_summary_alarm_tone"
            android:title="@string/pref_title_alarm_tone"
            android:showDefault="true"
            android:showSilent="false"
            />

        <Preference
            android:key="pref_key_vibrate_style"
            android:summary="@string/pref_summary_vibrate_style"
            android:title="@string/pref_title_vibrate_style"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_timer_title"
        android:key="pref_timer_settings">

        <Preference
            android:key="sitting_period_preference"
            android:title="@string/pref_title_sitting_period"
            android:summary="@string/pref_summary_sitting_period"
            />

        <Preference
            android:key="standing_period_preference"
            android:title="@string/pref_title_standing_period"
            android:summary="@string/pref_summary_standing_period"
            />

    </PreferenceCategory>

</PreferenceScreen>